@@ -129,6 +129,7 @@ o svscan: set SERVICEDIR, PWD environment variable
 51. replaced instcheck, hier.c with installer
 - 05/08/2021
 52. installer.c: added -p option to create directories as needed
+53. installer.c: allow installation for missig source if -m is specified
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
